# SerialPort

./: README.MD  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beviswang/serialport/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beviswang/serialport/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/beviswang/serialport/: ExampleUnitTest.kt
bevserialport/: CMakeLists.txt  build.gradle
bevserialport/src/androidTest/java/com/beviswang/bevserialport/: ExampleInstrumentedTest.java
bevserialport/src/main/: AndroidManifest.xml
bevserialport/src/main/cpp/: SerialPort.c
bevserialport/src/main/java/com/beviswang/bevserialport/: SerialPort.kt  SerialPortFinder.kt
bevserialport/src/main/java/com/beviswang/bevserialport/operator/: SPOperator.kt
bevserialport/src/main/res/values/: strings.xml
bevserialport/src/test/java/com/beviswang/bevserialport/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
